<resources>
    <string name="app_name">TecnoSchool App</string>
    <string name="btn_windows">Windows 11</string>
    <string name="name_windows">Windows 11</string>
    <string name="btn_office">Office 2016</string>
    <string name="name_Atajos_de_teclado_General">Atajos de teclado general</string>
    <string name="name_Atajos_de_teclado">Atajos de teclado </string>
    <string name="name_Introduccion_a_Windows11">Introduccion a Windows 11</string>
    <string name="name_Bienvenido">Bienvenido</string>
    <string name="name_Atajos_tecla_windows">Atajos con la tecla Windows</string>
    <string name="name_Administración_ventanas">Administración de ventanas y multitarea</string>
    <string name="name_Administración_sistema">Administración del sistema y herramientas</string>
    <string name="name_Explorador_de_archivos">Explorador de archivos</string>
    <string name="name_Navegación_navegadores_web">Navegación en web(Edge, Chrome, Firefox)</string>
    <string name="name_Accesibilidad_funciones_especiales">Accesibilidad y funciones especiales</string>
    <string name="name_Otros_comandos_útiles">Otros comandos útiles</string>
    <string name="name_Atajos_Windows">Atajos con la tecla Windows</string>
    <string name="name_Regresar">Regresar</string>
    <string name="name_Administracion_de_ventas">Administración de ventas</string>
    <string name="name_Buscar">Buscar en Windows</string>
    <string name="name_Abrir">Abrir historial de portapapeles</string>
    <string name="name_Bloquear">Bloquear el equipo</string>
    <string name="name_Mostrar">Mostrar escritorio</string>
    <string name="name_Minimizar">Minimizar todas las ventanas</string>
    <string name="name_Restaurar">Restaurar ventanas minimizadas</string>
    <string name="name_Asistente">Abrir el asistente de voz</string>
    <string name="name_Menu">Abrir menu de inicio</string>
    <string name="name_Ejecucion">Abrir ejecucion de comandos</string>
    <string name="name_Control">Ctrl + C</string>
    <string name="name_Ver_Atajo">Ver Atajo</string>
    <string name="name_Copiar">Copiar</string>
    <string name="name_Pega">Ctrl + V</string>
    <string name="name_Pegar">Pegar</string>
    <string name="name_Ctr">Ctrl + X</string>
    <string name="name_Cortar">Cortar</string>
    <string name="name_C">Ctrl + A</string>
    <string name="name_Seleccionar">Seleccionar todo</string>
    <string name="name_Deshacer">Deshacer</string>
    <string name="name_Alt">Alt + Tab</string>
    <string name="name_App">Cambiar entre aplicaciones abiertas</string>
    <string name="name_ALT">Alt + Shift + Tab</string>
    <string name="name_win">Win + Z</string>
    <string name="name_men">Abrir menú de disposición de ventanas </string>
    <string name="name_alt">Alt + F4</string>
    <string name="name_cerrar">Cerrar la ventana actual</string>
    <string name="name_ventanas">Cambiar entre ventanas en orden inverso</string>
    <string name="name_programa">Cambiar entre ventanas del mismo programa</string>
    <string name="name_ve">Ctrl + Alt + Tab</string>
    <string name="name_virtual">Abrir nuevo escritorio virtual</string>
    <string name="name_d">Win + Ctrl + D</string>
    <string name="name_escritorios">Cambiar entre escritorios virtuales</string>
    <string name="name_flecha">Win+Ctrl+Flecha izquierda/derecha</string>
    <string name="name_actual">Cerrar escritorio virtual actual</string>
    <string name="name_F4">Win + Ctrl + F4</string>
    <string name="name_admi">Administración del sistema y herramientas</string>
    <string name="name_tareas">Abrir Administrador de tareas</string>
    <string name="name_shi">Ctrl + Shift + Esc</string>
    <string name="name_eje">Win + R</string>
    <string name="name_ejecutar">Abrir cuadro “Ejecutar”</string>
    <string name="name_conf">Win + I</string>
    <string name="name_configuracion">Abrir configuración del sistema</string>
    <string name="name_Win">Win + R, luego escribe control</string>
    <string name="name_control">Abrir Panel de control (desde Ejecutar)</string>
    <string name="name_Winn">Win + R, luego escribe cmd</string>
    <string name="name_simbolo">Abrir símbolo del sistema (CMD)</string>
    <string name="name_termianl">Win + X, luego selecciona Terminal</string>
    <string name="name_Terminal">Abrir terminal de Windows</string>
    <string name="name_disp">Win + X, luego M</string>
    <string name="name_abrir">Abrir el Administrador de dispositivos</string>
    <string name="name_disco">Win + X, luego K</string>
    <string name="name_discos">Abrir el Administrador de discos</string>
    <string name="name_sis">Win + Pause / Break</string>
    <string name="name_sistema">Abrir Configuración del sistema avanzada</string>
    <string name="name_explorador">Explorador de archivos</string>
    <string name="name_ctl">Ctrl + N</string>
    <string name="name_ventana">Nueva ventana</string>
    <string name="name_T">Ctrl + T</string>
    <string name="name_pestaña">Nueva pestaña (Windows 11 22H2+)</string>
    <string name="name_Ctl">Ctrl + Tab o Ctrl + Shift + Tab</string>
    <string name="name_cambiar">Cambiar entre pestañas</string>
    <string name="name_N">Ctrl + Shift + N</string>
    <string name="name_crear">Crear nueva carpeta</string>
    <string name="name_supr">Supr</string>
    <string name="name_eliminar">Eliminar archivo / carpeta</string>
    <string name="name_papelera">Eliminar sin pasar por la papelera</string>
    <string name="name_eli">Shift + Supr</string>
    <string name="name_elemento">Propiedades del elemento</string>
    <string name="name_propi">Alt + Enter</string>
    <string name="name_f">F2</string>
    <string name="name_renom">Renombrar archivo / carpeta</string>
    <string name="name_selec">Alt + D</string>
    <string name="name_barra">Seleccionar barra de direcciones</string>
    <string name="name_retro">Alt + Flecha izquierda o Backspace</string>
    <string name="name_retroceder">Retroceder</string>
    <string name="name_derecha">Alt + Flecha derecha</string>
    <string name="name_avanzar">Avanzar</string>
    <string name="name_subir">Alt + Flecha arriba</string>
    <string name="name_nivel">Subir un nivel</string>
    <string name="name_F">F5</string>
    <string name="name_actualizar">Actualizar carpeta</string>
    <string name="name_p">Alt + Shift + P</string>
    <string name="name_mostrar">Mostrar/ocultar panel de navegación</string>
    <string name="name_Cerra">Ctrl + W</string>
    <string name="name_cerrarr">Cerrar pestaña</string>
    <string name="name_navegacion">Navegación en navegadores web (Edge, Chrome, Firefox)</string>
    <string name="name_navegador">Tu experiencia de navegación en Internet con atajos que te permiten abrir nuevas pestañas, cerrar ventanas,
        recargar páginas y moverte entre los web de forma más rápida y cómoda</string>
    <string name="name_ultima">Ctrl + Shift + T</string>
    <string name="name_reabrir">Reabrir última pestaña cerrada</string>
    <string name="name_inco">Ctrl + Shift + N</string>
    <string name="name_privada">Abrir ventana de incógnito / privada</string>
    <string name="name_numero">Ctrl + Tab o Ctrl + número (1–8)</string>
    <string name="name_pestañass">Cambiar entre pestañas</string>
    <string name="name_direcc">Alt + D o Ctrl + L</string>
    <string name="name_barraa">Ir a la barra de direcciones</string>
    <string name="name_F5">F5</string>
    <string name="name_actualizarr">Actualizar pagina</string>
    <string name="name_5">F5</string>
    <string name="name_forzar">Forzar recarga completa (sin caché)</string>
    <string name="name_ff">Ctrl + F</string>
    <string name="name_pagina">Buscar en la página</string>
    <string name="name_J">Ctrl + J</string>
    <string name="name_descargas">Abrir descargas</string>
    <string name="name_z">Ctrl + + / Ctrl + -</string>
    <string name="name_zoom">Zoom + / Zoom -</string>
    <string name="name_acceso">Accesibilidad y funciones especiales</string>
    <string name="name_especial">Exploran los atajos diseñados para la usabilidad del sistema para todos los usuarios. Esta sección cubre comandos
        que activan funciones de accesibilidad y herramientas especiales para una interacción más personalizada.</string>
    <string name="name_lup">Win + +</string>
    <string name="name_lupa">Abrir lupa</string>
    <string name="name_CERRARR">Cerrar lupa</string>
    <string name="name_Cerrar">Win + Esc</string>
    <string name="name_activar">Win + Ctrl + Enter</string>
    <string name="name_narrador">Activar narrador</string>
    <string name="name_teclado">Activar teclado en pantalla</string>
    <string name="name_pantalla">Win + Ctrl + O</string>
    <string name="name_contraste">Alt + Shift + Print Screen</string>
    <string name="name_alto">Activar contraste alto	</string>
    <string name="name_ACCES">Win + U</string>
    <string name="name_opciones">Abrir opciones de accesibilidad</string>
    <string name="name_no">Win + N luego clic en “Asistente de concentración”</string>
    <string name="name_molestar">Activar modo de enfoque / no molestar</string>
    <string name="name_vista">Ctrl + Alt + I / Ctrl + Alt + F (según vista)</string>
    <string name="name_ampliar">Ampliar pantalla (lupa)</string>
    <string name="name_comandos">Otros comandos útiles y de emergencia</string>
    <string name="name_util">Aprende atajos esenciales para situaciones críticas o para realizar tareas rápidas específicas. Desde capturas de pantalla hasta la apertura del administrador de tareas.
        Estos comandos son vitales para cualquier usuario.</string>
    <string name="name_cap">PrtScn</string>
    <string name="name_captura">Captura de pantalla completa</string>
    <string name="name_copiar">Win + Shift + S</string>
    <string name="name_papeles">Captura de pantalla y copiar al portapapeles</string>
    <string name="name_directo">Win + PrtScn</string>
    <string name="name_guardar">Guardar captura directamente</string>
    <string name="name_info">Win + Pause / Break</string>
    <string name="name_mostrarr">Mostrar información del sistema</string>
    <string name="name_bloquear">Ctrl + Alt + Flecha arriba</string>
    <string name="name_rotacion">Bloquear rotación de pantalla</string>
    <string name="name_pann">Ctrl + Alt + Flechas</string>
    <string name="name_rotar">Rotar pantalla</string>
    <string name="name_salir">Ctrl + Alt + Supr</string>
    <string name="name_sesion">Salir de sesión</string>
    <string name="name_reiniciar">Ctrl + Alt + Supr, luego ícono de energía</string>
    <string name="name_seguridad">Apagar / reiniciar desde pantalla de seguridad</string>
    <string name="name_Word">Word</string>
    <string name="name_Excel">Excel</string>
    <string name="name_Power_Point">Power Point</string>
    <string name="name_Intro">Introducción  a Word</string>
    <string name="name_herra">Barra de herramientas</string>
    <string name="name_archivo">Crear y guardar archivo</string>
    <string name="name_texto">Formato de texto y párrafo</string>
    <string name="name_listas">Listas numeradas y viñetas</string>
    <string name="name_pies">Pies de página y numeración</string>
    <string name="name_insertar">Insertar imágenes y gráficos</string>
    <string name="name_estilos">Estilos y plantillas</string>
    <string name="name_ortografia">Ortografía y comentarios</string>
    <string name="name_imprimir">Como imprimir</string>
    <string name="name_IntroduccionP">Introducción  a Power Point</string>
    <string name="name_Herra">Barra de herramientas</string>
    <string name="name_Diseño">Diseño de diapositivas</string>
    <string name="name_Contenido">Contenido multimedia</string>
    <string name="name_Presentacion">Presentación interativa</string>
    <string name="name_funciones">Funciones avanzadas</string>
    <string name="name_Animaciones">Transiciones y animaciones</string>
</resources>