<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu_Power_Point"
    android:background="@drawable/crema">

    <Button
        android:id="@+id/btnRegresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="268dp"
        android:backgroundTint="#FF5722"
        android:text="@string/name_Regresar"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.979" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="212dp"
        android:layout_height="49dp"
        android:layout_marginStart="112dp"
        android:text="@string/name_Power_Point"
        android:textColor="#FF5722"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="82dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.021"
        app:srcCompat="@drawable/img_9" />

    <Button
        android:id="@+id/button1"
        android:layout_width="168dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="#FF5722"
        android:text="@string/name_IntroduccionP"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.262"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button6"
        android:layout_width="168dp"
        android:layout_height="90dp"
        android:layout_marginStart="208dp"
        android:backgroundTint="#FF5722"
        android:text="@string/name_funciones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="168dp"
        android:layout_height="90dp"
        android:layout_marginStart="24dp"
        android:backgroundTint="#FF5722"
        android:text="@string/name_Presentacion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.673"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button7"
        android:layout_width="168dp"
        android:layout_height="90dp"
        android:layout_marginStart="28dp"
        android:backgroundTint="#FF5722"
        android:text="@string/name_Animaciones"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.89" />

    <Button
        android:id="@+id/button4"
        android:layout_width="168dp"
        android:layout_height="90dp"
        android:layout_marginStart="208dp"
        android:backgroundTint="#FF5722"
        android:text="@string/name_Contenido"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.576"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="168dp"
        android:layout_height="90dp"
        android:layout_marginStart="24dp"
        android:backgroundTint="#FF5722"
        android:text="@string/name_Diseño"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.465"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="168dp"
        android:layout_height="90dp"
        android:layout_marginStart="208dp"
        android:backgroundTint="#FF5722"
        android:text="@string/name_Herra"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.366"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>